# ai-studio

./: .gitignore  docker-compose.yml  index.html
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: celery_app.py  config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  character.py  clip.py  location.py  log.py  project.py  scene.py  scene_character.py  script.py  user.py
backend/app/routers/: auth.py  characters.py  clips.py  locations.py  orchestrator.py  projects.py  scenes.py  scripts.py  tasks.py
backend/app/schemas/: __init__.py  character.py  clip.py  location.py  orchestrator.py  project.py  scene.py  user.py
backend/app/services/: __init__.py  llm_client.py  orchestrator.py  storage.py  tool_executor.py  tools.py
backend/app/tasks/: __init__.py  ingest.py  orchestrate.py  render.py
demo/: index.html
docs/: MONETIZATION_AND_UNIT_ECONOMICS.md  TODO_PHASE1_COMPLETION.md  TZ_PHASE1.md
frontend/: Dockerfile  docker-compose.yml  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/: error.tsx  layout.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: app-sidebar.tsx  empty-state.tsx  loading-state.tsx  orchestrator-chat.tsx  pipeline-view.tsx  script-editor.tsx
frontend/src/lib/: auth.config.ts  auth.ts
(+27 files in other folders)
